--- a/style_images_m.css
+++ b/style_images_m.css
@@ -82,8 +82,8 @@ body {
 .image {
     background-color: rgb(240, 240, 240); /* dim default background like desktop non-hover state */
     display: flex;
-    /* width: calc((100% - 1vw) / 3); Adjusted to fit 6 squares per row with spacing */
-    aspect-ratio: 1.3; /* Ensures the square has equal width and height */
+    width: 100%;
+    aspect-ratio: 4/3;
     align-items: center; /* Centers the image vertically */
     justify-content: center; /* Centers the image horizontally */
     box-sizing: border-box; /* Includes padding and border in the width/height */
@@ -96,7 +96,7 @@ body {
     margin-bottom:1rem;       /* gap after the text line */
 }
 .text p{
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 0.4);
 }
 
 
