--- a/style_projects.css
+++ b/style_projects.css
@@ -78,17 +78,19 @@ body {
 }
 .image a{
     background-color: white; /* Makes the square background white */
+    width: 100%;
+    height: 100%;
     display: flex;
-    width: calc((100% - 2.5vw) / 6); /* Adjusted to fit 6 squares per row with spacing */
-    aspect-ratio: 1; /* Ensures the square has equal width and height */
     align-items: center; /* Centers the image vertically */
     justify-content: center; /* Centers the image horizontally */
     box-sizing: border-box; /* Includes padding and border in the width/height */
-    width: 100%;
-    height: 100%;
-
 }
 
+.image a img {
+    max-width: 90%;
+    max-height: 90%;
+    opacity: 0%;
+}
 
 .text {
     display: flex;
@@ -99,11 +101,7 @@ body {
 
 
 
-.image a img {
-    max-width: 90%;
-    max-height: 90%;
-    opacity: 0%;
-}
+
 
 
 
