--- a/style_projects_m.css
+++ b/style_projects_m.css
@@ -87,15 +87,12 @@ body {
 }
 .image a{
     background-color: white; /* Makes the square background white */
+    width: 100%;
+    height: 100%;
     display: flex;
-    width: calc((100% - 2.5vw) / 3); /* Adjusted to fit 6 squares per row with spacing */
-    aspect-ratio: 1; /* Ensures the square has equal width and height */
     align-items: center; /* Centers the image vertically */
     justify-content: center; /* Centers the image horizontally */
     box-sizing: border-box; /* Includes padding and border in the width/height */
-    width: 100%;
-    height: 100%;
-
 }
 
 .image_empty {
@@ -110,6 +107,9 @@ body {
     flex-direction: column;
     width: 100%;
     margin-bottom:1rem;       /* gap after the text line */
+}
+.text p{
+    color: rgba(0, 0, 0, 0.4);
 }
 
 
@@ -157,23 +157,6 @@ body {
     transition: opacity 0.2s ease;
 }
 
-
-
-.container[data-active-group="1"] .text:not([data-group="1"]) p,
-.container[data-active-group="2"] .text:not([data-group="2"]) p,
-.container[data-active-group="3"] .text:not([data-group="3"]) p,
-.container[data-active-group="4"] .text:not([data-group="4"]) p,
-.container[data-active-group="5"] .text:not([data-group="5"]) p,
-.container[data-active-group="6"] .text:not([data-group="6"]) p,
-.container[data-active-group="7"] .text:not([data-group="7"]) p,
-.container[data-active-group="8"] .text:not([data-group="8"]) p,
-.container[data-active-group="9"] .text:not([data-group="9"]) p,
-.container[data-active-group="10"] .text:not([data-group="10"]) p,
-.container[data-active-group="11"] .text:not([data-group="11"]) p,
-.container[data-active-group="12"] .text:not([data-group="12"]) p 
-{
-    color: rgb(0, 0, 0, 0.4);
-}
 
 .container[data-active-group="1"] .text[data-group="1"] p,
 .container[data-active-group="2"] .text[data-group="2"] p,
